--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,27 @@
 version: "3.1"
 services:
+
+  web:
+    image: fajarkarim/web-custom
+    ports: 
+      - "8080:80"
+    networks:
+      - "int-net"
+    depends_on: 
+      - mysql
+  
+  pma:
+    image: fajarkarim/pma-custom
+    ports:
+      - "8081:80"
+    networks:
+      - "proxy-net"
+      - "int-net"
+    depends_on: 
+      - mysql
+    environment:
+      - PMA_HOST=mysql
+
   mysql: 
     image: fajarkarim/mysql-custom
     environment: 
@@ -11,14 +33,6 @@ services:
     networks:
         - "int-net"
   
-  web:
-    image: fajarkarim/web-custom
-    ports: 
-      - "8080:80"
-    networks:
-      - "int-net"
-    depends_on: 
-      - mysql
-  
 networks: 
   int-net:
+  proxy-net:
