--- a/docker_images/web/Dockerfile
+++ b/docker_images/web/Dockerfile
@@ -2,3 +2,5 @@ FROM php:7.2-apache
 
 COPY ./src/ /var/www/html/
 RUN docker-php-ext-install mysqli pdo pdo_mysql && docker-php-ext-enable pdo_mysql
+HEALTHCHECK --interval=5m --timeout=3s \
+  CMD curl -f http://localhost/ || exit 1
