--- a/docker-prod-stack.yml
+++ b/docker-prod-stack.yml
@@ -21,6 +21,8 @@ services:
       - mysql
     environment:
       - PMA_HOST=mysql
+    ports:
+      - "8089:80"
     deploy: 
       mode: 'replicated'
       replicas: 2
